config/samples/networking_istio_v1beta1_virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: varnish-noodle-vs
  namespace: ratelimitoperatortest
spec:
  gateways:
  - istio-system/istio-autogenerated-k8s-ingress
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /ads.txt
    route:
    - destination:
        host: noodle-varnish
