config/samples/networking_v1alpha1_virtualservice.yaml
apiVersion: networking.softonic.io/v1alpha1
kind: VirtualService
metadata:
  name: varnish-noodle-vs
  namespace: ratelimitoperatortest
spec:
  Hosts:
  - '*:80'
