config/samples/virtualservice_test.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs-test
spec:
  gateways:
  - istio-system/istio-autogenerated-k8s-ingress
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /ads.txt
    route:
    - destination:
        host: noodle-varnish
